--- a/freecode.css
+++ b/freecode.css
@@ -14,7 +14,7 @@
 
   .smaller-image {
     width: 100px;
-    border-radius: 10px;
+    border-radius: 50%;
   }
   .thick-green-border{
       border-color: green;
