--- a/freecode.css
+++ b/freecode.css
@@ -22,6 +22,9 @@
       border-style: groove;
       border-radius: 10px;
   }
+  .silver-background{
+    background-color: silver;
+  }
 </style>
 
 <h2 class="red-text">CatPhotoApp</h2>
@@ -43,7 +46,7 @@
       <li>thunder</li>
       <li>other cats</li>
     </ol>
-  </div>
+  </div class= "silver-background">
 
   <form action="https://freecatphotoapp.com/submit-cat-photo">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
