--- a/freecode.css
+++ b/freecode.css
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link href ="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
   .red-text {
     color: red;
@@ -27,7 +27,7 @@
   }
 </style>
 
-<h2 class="red-text">CatPhotoApp</h2>
+<h2 id="cat-photo-app" class="red-text">CatPhotoApp</h2>
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
@@ -47,8 +47,7 @@
       <li>other cats</li>
     </ol>
   </div class= "silver-background">
-
-  <form action="https://freecatphotoapp.com/submit-cat-photo">
+  <form id="cat-photo-form" action="https://freecatphotoapp.com/submit-cat-photo">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
     <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
     <label><input type="checkbox" name="personality" checked> Loving</label>
