--- a/freecode.css
+++ b/freecode.css
@@ -25,13 +25,16 @@
   .silver-background{
     background-color: silver;
   }
+  #cat-photo-form{
+    background-color: yellow;
+  }
 </style>
-
 <h2 id="cat-photo-app" class="red-text">CatPhotoApp</h2>
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" 
+  alt="A cute orange cat lying on its back."></a>
 
   <div>
     <p>Things cats love:</p>
