edit padding red and blue box

--- a/padding.css
+++ b/padding.css
@@ -19,15 +19,21 @@
   .red-box {
     background-color: crimson;
     color: #fff;
-    padding: 20px;
-    margin: -15px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    
   }
 
   .blue-box {
     background-color: blue;
     color: #fff;
-    padding: 20px;
-    margin: -15px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    
   }
 </style>
 <h5 class="injected-text">margin</h5>
