--- a/freecode.css
+++ b/freecode.css
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <link href ="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
   .red-text {
@@ -27,6 +29,12 @@
   }
   #cat-photo-form{
     background-color: yellow;
+  }
+  [type='radio'] {
+    margin: 10px 20px 10px 20px;
+  }
+  [type='checkbox'] {
+    margin: 20px 10px 10px 20px;
   }
 </style>
 
