--- a/padding.css
+++ b/padding.css
@@ -19,10 +19,7 @@
   .red-box {
     background-color: crimson;
     color: #fff;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 40px;
-    padding-bottom: 40px;
+    padding: 1.5em;
     
   }
 
