--- a/penguin.css
+++ b/penguin.css
@@ -18,6 +18,7 @@
   .penguin-top {
     top: 10%;
     left: 25%;
+    background: gray;
     background: var(--penguin-skin, gray);
     width: 50%;
     height: 45%;
@@ -27,6 +28,7 @@
   .penguin-bottom {
     top: 40%;
     left: 23.5%;
+    background: gray;
     background: var(--penguin-skin, gray);
     width: 53%;
     height: 45%;
@@ -36,6 +38,7 @@
   .right-hand {
     top: 0%;
     left: -5%;
+    background: gray;
     background: var(--penguin-skin, gray);
     width: 30%;
     height: 60%;
@@ -47,6 +50,7 @@
   .left-hand {
     top: 0%;
     left: 75%;
+    background: gray;
     background: var(--penguin-skin, gray);
     width: 30%;
     height: 60%;
@@ -67,6 +71,7 @@
   .left-cheek {
     top: 15%;
     left: 5%;
+    background: white;
     background: var(--penguin-belly, white);
     width: 60%;
     height: 70%;
@@ -76,6 +81,7 @@
   .belly {
     top: 60%;
     left: 2.5%;
+    background: white;
     background: var(--penguin-belly, white);
     width: 95%;
     height: 100%;
@@ -85,6 +91,7 @@
   .right-feet {
     top: 85%;
     left: 60%;
+    background: orange;
     background: var(--penguin-beak, orange);
     width: 15%;
     height: 30%;
@@ -96,6 +103,7 @@
   .left-feet {
     top: 85%;
     left: 25%;
+    background: orange;
     background: var(--penguin-beak, orange);
     width: 15%;
     height: 30%;
