--- a/penguin.css
+++ b/penguin.css
@@ -1,11 +1,18 @@
 <style>
-  .penguin {
-
-    /* Only change code below this line */
-    --penguin-skin: gray;
+    :root {
+        --penguin-skin: gray;
+        --penguin-belly: pink;
+        --penguin-beak: orange;
+    }
+     body {
+            background: var(--penguin-belly, #c6faf1);
+        }
+    
+    .penguin {
+        --penguin-skin: gray;
     --penguin-belly: white;
     --penguin-beak: orange;
-    /* Only change code above this line */
+    
 
     position: relative;
     margin: auto;
