--- a/applied visual design.css
+++ b/applied visual design.css
@@ -25,6 +25,7 @@
   <div class="cardContent">
     <div class="cardText">
       <h4>Google</h4>
+      <hr>
       <p>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong> Stanford University.</strong></p>
     </div>
     <div class="cardLinks">
