--- a/applied visual design.css
+++ b/applied visual design.css
@@ -1,7 +1,8 @@
 <style>
   h4 {
     text-align: center;
-    height: 25px;
+    padding: 10px;
+    background-color: rgba(45, 45, 45, 0.3);
   }
   p {
     text-align: justify;
