--- a/applied visual design.css
+++ b/applied visual design.css
@@ -10,6 +10,7 @@
   .links {
     margin-right: 20px;
     text-align: left;
+    opacity: 0.7;
   }
   .fullCard {
 
@@ -20,6 +21,9 @@
   }
   .cardContent {
     padding: 10px;
+  }
+  #thumbnail {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 </style>
 <div class="fullCard">
