--- a/applied visual design.css
+++ b/applied visual design.css
@@ -3,7 +3,9 @@
     text-align: center;
     padding: 10px;
     background-color: rgba(45, 45, 45, 0.3);
+    text-transform: uppercase;
   }
+
   p {
     text-align: justify;
   }
@@ -11,6 +13,7 @@
     margin-right: 20px;
     text-align: left;
     opacity: 0.7;
+    text-transform: capitalize;
   }
   .fullCard {
 
@@ -24,6 +27,9 @@
   }
   #thumbnail {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+  a:hover {
+      font-color: blue;
   }
 </style>
 <div class="fullCard">
