--- a/cooking fcc.css
+++ b/cooking fcc.css
@@ -55,7 +55,9 @@
   </article>
   <article>
     <h2>Bisection Vegetable Chopping</h2>
-    <p>This week-long retreat will level-up your coding ninja skills to actual ninja skills. No longer is the humble bisection search limited to sorted arrays or coding interview questions, applying its concepts in the kitchen will have you chopping carrots in O(log n) time before you know it.</p>
+    <p>This <strong>week-long </strong> retreat will level-up your coding ninja skills to actual ninja skills. </p>
+    <br>
+    <p> No longer is the humble bisection search limited to sorted arrays or coding interview questions, applying its concepts in the kitchen will have you chopping carrots in O(log n) time before you know it.</p>
     <button>Sign Up</button>
   </article>
 </main>
